@@ -2212,6 +2212,8 @@ remove_help_topic_help  Remove a help topic.
 remove_help_topic_success Removed help topic "\1".\n
 remove_help_topic_notfound Help topic "\1" doesn't exist.\n
 
+rtfm_announcement \1 wants you to know about the following help topic:\n
+
 help_introductory_blurb_help Message that is displayed before the list of help topics if someone uses /help without arguments
 
 help_topics_list_start  Say /help TOPIC to get help on the following topics.\n
@@ -2239,7 +2241,7 @@ help_commands_ra_shortdesc Remote admin commands
 help_commands_ra_text 0x88ff88/login <password>0xffff88: Log in as the server administrator using the server-specific password\n0x88ff88/logout0xffff88: Drop your logged in status so that other players can't see that you're an administrator\n0x88ff88/admin <command>0xffff88: Execute a console command as if it were entered on the server
 
 help_commands_misc_shortdesc Miscellaneous commands
-help_commands_misc_text 0x88ff88/help0xffff88: You just found out about this one :-)\n0x88ff88/command <command>0xffff88: Execute a command on your own client. Useful for instant chats
+help_commands_misc_text 0x88ff88/help0xffff88: You just found out about this one :-)\n0x88ff88/teach <player> <topic>0xffff88: same as /help, but the the output gets sent to another player.\n0x88ff88/rtfm0xffff88: alias for /teach\n0x88ff88/command <command>0xffff88: Execute a command on your own client. Useful for instant chats
 
 help_commands_tourney_shortdesc Tourney related commands
 help_commands_tourney_text 0x88ff88/lock0xffff88: Locks your current team. Nobody can join it any more on their own. To let someone in, you need to invoke\n0x88ff88/invite <player>0xffff88: From that moment on, the player is allowed to join you. Another effect of /invite, even if your team is not locked, is that the invited player can read all of your team's /team messages. Invitations are permanent until revoked. That means a player who is invited into your team can join and leave it freely without further need to /invite him again. Players who were on the team when you /locked it are not automatically invited when they leave on their own account.\n0x88ff88/uninvite <player>0xffff88: reverses /invite. The invitation is revoked, the player can no longer join you, and if he currently is on your team, he will be thrown out.\n0x88ff88/unlock0xffff88: makes your team available for everyone to join again.
@@ -2636,6 +2638,7 @@ access_level_team_help         Minimal access level for /lock, /unlock, /invite 
 access_level_op_help           Minimal access level for /op, /deop, /promote and /demote co-admin management commands commands.
 access_level_op_max_help       Maximal access level attainable by /op and /promote commands.
 access_level_admin_help        Minimal access level for /admin command.
+access_level_rtfm_help        Minimal access level for /teach or /rtfm command.
 access_level_chat_help         Minimal access level for chatting.
 access_level_ips_help          Minimal access level you need for seeing IPs of players in the /players command.
 access_level_spy_team_help     Minimal access level you need for seeing /team messages as a spectator.
@@ -2667,6 +2670,8 @@ access_level_promote        \1 has been promoted to "\2" by order of \3.\n
 
 access_level_admin_denied   0xff7f7f/admin denied,0xffffff insufficient access level.\n
 access_level_shuffle_up_denied Required access level to shuffle up is "\1", you only have "\2".\n
+access_level_rtfm_denied    Required access level to teach others is "\1", you only have "\2".\n
+rtfm_denied                 You need to be logged in to teach others.\n
 
 chat_command_unknown        Unknown chat command "\1".\n
 
